--- a/SubEthaEdit-Mac/SEEParticipantView.xib
+++ b/SubEthaEdit-Mac/SEEParticipantView.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13C48" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13C59" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4514"/>
     </dependencies>
@@ -10,12 +10,14 @@
                 <outlet property="chooseReadOnlyModeButtonOutlet" destination="7Kl-QN-egj" id="Dl1-HW-hvb"/>
                 <outlet property="closeConnectionButtonOutlet" destination="Uv8-hZ-TnG" id="RDO-0v-jmD"/>
                 <outlet property="connectingProgressIndicatorOutlet" destination="k1p-6D-syT" id="wZs-np-mwT"/>
+                <outlet property="hasFollowerOverlayImageOutlet" destination="Ean-kT-01Z" id="3LV-kx-M3a"/>
                 <outlet property="nameLabelOutlet" destination="laB-2b-86S" id="XZX-Mn-N4c"/>
                 <outlet property="participantActionOverlayOutlet" destination="lTM-E1-CsT" id="BMS-gs-uzp"/>
                 <outlet property="participantViewOutlet" destination="1" id="xn7-5f-3EV"/>
                 <outlet property="pendingUserActionOverlayOutlet" destination="Y0C-Vm-vVD" id="YO2-LH-dqF"/>
                 <outlet property="pendingUserKickButtonOutlet" destination="ioi-KN-wP0" id="a5d-nh-9GH"/>
                 <outlet property="pendingUserQuestionMarkOutlet" destination="i14-Tb-TdJ" id="kOH-bI-HoT"/>
+                <outlet property="readOnlyOverlayImageOutlet" destination="vtW-pW-OTD" id="U6e-5m-nDu"/>
                 <outlet property="toggleEditModeButtonOutlet" destination="cLZ-EU-8Vm" id="Csv-Cp-tP3"/>
                 <outlet property="toggleFollowButtonOutlet" destination="Eo9-iL-hjL" id="ezF-Du-PmF"/>
                 <outlet property="userViewButtonLeftConstraintOutlet" destination="6bf-Dn-WAG" id="kBs-s3-cYk"/>
@@ -41,12 +43,37 @@
                         <font key="font" metaFont="system"/>
                     </buttonCell>
                 </button>
+                <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ean-kT-01Z">
+                    <rect key="frame" x="54" y="27" width="24" height="24"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="24" id="0ro-xk-YQg"/>
+                        <constraint firstAttribute="height" constant="24" id="wJl-S8-LJ3"/>
+                    </constraints>
+                    <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="SharingIconEye" id="VX9-Yi-9ex"/>
+                    <connections>
+                        <binding destination="-2" name="hidden" keyPath="self.isParticipantFollowed" id="tPS-us-iVf">
+                            <dictionary key="options">
+                                <string key="NSValueTransformerName">NSNegateBoolean</string>
+                            </dictionary>
+                        </binding>
+                    </connections>
+                </imageView>
+                <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vtW-pW-OTD">
+                    <rect key="frame" x="18" y="27" width="24" height="24"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="24" id="0pa-8A-g89"/>
+                        <constraint firstAttribute="width" constant="24" id="uyR-mt-xah"/>
+                    </constraints>
+                    <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="SharingIconReadOnly" id="uJJ-2w-3c8"/>
+                </imageView>
                 <progressIndicator horizontalHuggingPriority="750" verticalHuggingPriority="750" maxValue="100" displayedWhenStopped="NO" bezeled="NO" indeterminate="YES" style="spinning" translatesAutoresizingMaskIntoConstraints="NO" id="k1p-6D-syT">
                     <rect key="frame" x="32" y="40" width="32" height="32"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                 </progressIndicator>
                 <textField hidden="YES" wantsLayer="YES" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="i14-Tb-TdJ">
-                    <rect key="frame" x="34" y="33" width="29" height="48"/>
+                    <rect key="frame" x="33" y="33" width="29" height="48"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <shadow key="shadow" blurRadius="3">
                         <size key="offset" width="1" height="1"/>
@@ -58,7 +85,7 @@
                     </textFieldCell>
                 </textField>
                 <textField horizontalHuggingPriority="750" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="laB-2b-86S" userLabel="Text Field - Participant Name">
-                    <rect key="frame" x="29" y="8" width="39" height="14"/>
+                    <rect key="frame" x="28" y="8" width="39" height="14"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="Name" id="JUh-En-lK2">
                         <font key="font" metaFont="smallSystem"/>
@@ -68,6 +95,7 @@
                 </textField>
             </subviews>
             <constraints>
+                <constraint firstItem="Ean-kT-01Z" firstAttribute="bottom" secondItem="hE6-nB-RDu" secondAttribute="bottom" constant="2" id="6GB-5u-Beg"/>
                 <constraint firstAttribute="centerX" secondItem="hE6-nB-RDu" secondAttribute="centerX" id="6bf-Dn-WAG"/>
                 <constraint firstAttribute="centerY" secondItem="hE6-nB-RDu" secondAttribute="centerY" constant="9" id="9g1-gp-gv4"/>
                 <constraint firstItem="hE6-nB-RDu" firstAttribute="centerY" secondItem="i14-Tb-TdJ" secondAttribute="centerY" id="BeS-c5-vn6"/>
@@ -75,10 +103,13 @@
                 <constraint firstItem="hE6-nB-RDu" firstAttribute="centerX" secondItem="k1p-6D-syT" secondAttribute="centerX" id="DMG-H5-rAW"/>
                 <constraint firstAttribute="width" secondItem="hE6-nB-RDu" secondAttribute="width" priority="549" constant="44" id="KND-Ve-MSI"/>
                 <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="96" id="LnQ-VY-TNr"/>
+                <constraint firstItem="Ean-kT-01Z" firstAttribute="trailing" secondItem="hE6-nB-RDu" secondAttribute="trailing" constant="2" id="QY7-Bl-g4Q"/>
                 <constraint firstAttribute="centerX" secondItem="laB-2b-86S" secondAttribute="centerX" id="SG5-MR-sI7"/>
                 <constraint firstItem="hE6-nB-RDu" firstAttribute="centerY" secondItem="k1p-6D-syT" secondAttribute="centerY" constant="-1" id="XBu-jo-auU"/>
                 <constraint firstItem="hE6-nB-RDu" firstAttribute="centerX" secondItem="i14-Tb-TdJ" secondAttribute="centerX" id="cZw-Ty-KOG"/>
+                <constraint firstItem="hE6-nB-RDu" firstAttribute="bottom" secondItem="vtW-pW-OTD" secondAttribute="bottom" constant="-2" id="f4Z-WG-cca"/>
                 <constraint firstItem="laB-2b-86S" firstAttribute="top" secondItem="hE6-nB-RDu" secondAttribute="bottom" constant="7" id="fDc-KA-DyE"/>
+                <constraint firstItem="hE6-nB-RDu" firstAttribute="leading" secondItem="vtW-pW-OTD" secondAttribute="leading" constant="2" id="iTu-lA-Mcf"/>
                 <constraint firstAttribute="width" secondItem="laB-2b-86S" secondAttribute="width" priority="550" constant="10" id="m4y-y8-bvP"/>
             </constraints>
             <animations>
