--- a/SubEthaEdit-Mac/German.lproj/MainMenu.xib
+++ b/SubEthaEdit-Mac/German.lproj/MainMenu.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13B3116" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <deployment defaultVersion="1090" identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4514"/>
@@ -1096,6 +1096,7 @@
             <connections>
                 <outlet property="O_licenseTextView" destination="590" id="592"/>
                 <outlet property="O_licenseWindow" destination="587" id="591"/>
+                <outlet property="accessControlMenuItem" destination="510" id="kCI-h3-dFy"/>
             </connections>
         </customObject>
         <customObject id="212" userLabel="TCMPreferenceController" customClass="TCMPreferenceController"/>
