--- a/SubEthaEdit-Mac/SEEConnectionAddingWindowController.xib
+++ b/SubEthaEdit-Mac/SEEConnectionAddingWindowController.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13C64" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="5053" systemVersion="13D21" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4514"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="5053"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="SEEConnectionAddingWindowController">
@@ -11,7 +11,7 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application"/>
-        <window title="Add Connection" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" restorable="NO" oneShot="NO" releasedWhenClosed="NO" wantsToBeColor="NO" visibleAtLaunch="NO" animationBehavior="default" id="1">
+        <window title="Add Connection" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" restorable="NO" oneShot="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" animationBehavior="default" id="1" userLabel="0">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" topStrut="YES"/>
             <rect key="contentRect" x="184" y="846" width="325" height="89"/>
@@ -67,7 +67,7 @@ DQ
                         </connections>
                     </button>
                     <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="lTQ-jL-U6G">
-                        <rect key="frame" x="187" y="18" width="50" height="25"/>
+                        <rect key="frame" x="177" y="18" width="60" height="25"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <buttonCell key="cell" type="squareTextured" title="Cancel" bezelStyle="texturedSquare" imagePosition="overlaps" alignment="center" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="3z3-Th-rav">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -85,6 +85,7 @@ DQ
                     <constraint firstItem="uGS-c0-4cH" firstAttribute="baseline" secondItem="Dug-5q-Xxt" secondAttribute="baseline" id="FJS-5x-os9"/>
                     <constraint firstItem="lTQ-jL-U6G" firstAttribute="top" secondItem="uGS-c0-4cH" secondAttribute="bottom" constant="8" symbolic="YES" id="Jt9-wN-fzu"/>
                     <constraint firstItem="Dug-5q-Xxt" firstAttribute="top" secondItem="2" secondAttribute="top" constant="20" symbolic="YES" id="gI4-hp-tMN"/>
+                    <constraint firstItem="lTQ-jL-U6G" firstAttribute="width" secondItem="QGc-og-ABo" secondAttribute="width" id="ggr-gj-iyJ"/>
                     <constraint firstAttribute="trailing" secondItem="uGS-c0-4cH" secondAttribute="trailing" constant="20" symbolic="YES" id="l9z-py-ICY"/>
                     <constraint firstItem="Dug-5q-Xxt" firstAttribute="leading" secondItem="2" secondAttribute="leading" constant="20" symbolic="YES" id="nHh-2T-D0W"/>
                     <constraint firstItem="QGc-og-ABo" firstAttribute="trailing" secondItem="uGS-c0-4cH" secondAttribute="trailing" id="qvF-0j-ToP"/>
