--- a/SubEthaEdit-Mac/SEEParticipantsOverlay.xib
+++ b/SubEthaEdit-Mac/SEEParticipantsOverlay.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13C64" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="5053" systemVersion="13C64" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment version="1070" identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4514"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="5053"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="SEEParticipantsOverlayViewController">
@@ -12,9 +12,12 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application"/>
-        <customView wantsLayer="YES" id="1" userLabel="Overlay View" customClass="SEEOverlayView">
+        <customView wantsLayer="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1" userLabel="Overlay View" customClass="SEEOverlayView">
             <rect key="frame" x="0.0" y="0.0" width="480" height="96"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+            <constraints>
+                <constraint firstAttribute="height" constant="96" id="VPV-xs-D7N"/>
+            </constraints>
             <backgroundFilters>
                 <ciFilter name="CIGaussianBlur">
                     <configuration>
